# langraph_agentic_templates

./: .gitignore  README.md  langgraph.json  notebook.ipynb  pyproject.toml  requirements.txt
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag-pdf.ipynb  06-chaining.ipynb  07-output-parser.ipynb  09-prompting.ipynb  10-react.ipynb  11-react_tools_in_deep.ipynb  12-react_tools_structured.ipynb  13-routing-conditions.ipynb  14-parallization.ipynb  notebook.ipynb
notebooks/source_meridian/: 15-A-technical-review.ipynb  15-B-technical-review.ipynb
notebooks/source_meridian/data/processed/: pubmed_with_specialty.csv
notebooks/source_meridian/data/raw/: pubmed_raw.csv
src/agents/: chaining_rag_pdf.py  history.py  main.py  multiagent.py  rag-pdf.py  rag_output_parser.py  rag_productive.py  simple.py
src/agents/react_rag/: agent.py
src/agents/source_meridian/: agent.py  state.py
src/agents/source_meridian/data/processed/: pubmed_with_specialty.csv
src/agents/source_meridian/nodes/classifier/: node.py
src/agents/source_meridian/nodes/extract/: node.py
src/agents/source_meridian/nodes/fetch_data/: node.py  prompt.py
src/agents/source_meridian/nodes/persist/: node.py
src/agents/source_meridian/routes/intent/: route.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: agent.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/nodes/relevant_questions/: agent.py  (+2 more)
src/api/: main.py
(+1 files in other folders)
