[project]
name = "langraph-agentic-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[anthropic]>=0.3.27",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "langgraph-cli[inmem]>=0.4.2",
    "ipykernel>=6.30.1",
    "langchain-anthropic>=0.3.21",
    "fastapi[standard]>=0.118.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.118.0",
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "langgraph-cli>=0.4.2",
    "pandas>=2.3.3",
    "paperscraper>=0.3.2",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
